# internal/controller/keyController.go
@@ -9,8 +9,16 @@ import (
 // GetCsRfToken generates a CSRF token and sends it as a response.
 // It takes a gin.Context object as a parameter.
 // Returns an error if any.
+// @Summary Get CSRF Token
+// @Description Generates a CSRF token and sends it as a response
+// @Tags CSRF
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Success 200 {string} string "CSRF token"
+// @Router /key/csrf-token [get]
 func GetCsRfToken(c *gin.Context) error {
 	token := csrf.GetToken(c)
-	response.Ok(c, "Get Key Token", token)
+	response.Ok(c, "CSRF Token", token)
 	return nil
 }
